This commit will fix some spacing errors

--- a/common/theme.css
+++ b/common/theme.css
@@ -2,10 +2,9 @@
   --color-primary: #431123;
   --color-secondary: #1a2030;
   --color-accent: #c1b970;
-  --color-neutral-grey: #e0Dede;
-
-  --font-primary: 'Quicksand', sans-serif;
-  --font-secondary: 'Abhaya Libre', serif;
+  --color-neutral-grey: #e0dede;
+  --font-primary: "Quicksand", sans-serif;
+  --font-secondary: "Abhaya Libre", serif;
 }
 
 html {
